# hermes-agent

./: .cursorrules  .env.example  .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  RL_RESEARCH_WITH_HERMES.md  TODO.md  atropos_compatible_agent.py  batch_runner.py  batch_runner_threaded.py  cli-config.yaml.example  cli.py  flake.nix  gemini_nothinking.sh  gemini_thinking.sh  hermes  local_server.py  mixture_of_agents_tool.py  mock_web_tools.py  modal_profiles.yaml.example  model_tools.py  nomad-dev.hcl  nomad-singularity.hcl  output.txt  package-lock.json  package.json  profiling.py  pyproject.toml  requirements.txt  run_agent.py  run_datagen_glm4.7.sh  run_datagen_images.sh  safe_print.py  setup-hermes.sh  terminal_tool.py  test_mock_mode.sh  test_parallel_execution.py  test_run.sh  test_singularity_job.py  (+7 more)
agent/: TOOL_ADAPTER_WIRING.md  context_compressor.py  display.py  loop_driver.py  model_capabilities.py  model_metadata.py  prompt_builder.py  tool_call_parser.py  tool_prompt_injector.py  tool_response_adapter.py
api_endpoint/: __init__.py  logging_server.py  test_websocket_logging.sh  websocket_connection_pool.py  websocket_logger.py
architecture/: agents.md  message_graph.md  tools.md
atropos/: Dockerfile  __init__.py  sandbox_server.py
atropos/agent/: __init__.py  atropos_agent.py
atropos/api/: __init__.py  tool_executor_server.py  tool_server.py
atropos/backends/: __init__.py  base.py  modal_backend.py  nomad_backend.py
atropos/envs/: __init__.py  agent_env.py  endless_terminals_env.py  hermes_compat_test_env.py  sandbox_terminal_smoke_env.py  swe_smith_oracle_env.py  test_env.py  toolserver_smoke_env.py
atropos/nomad/: __init__.py  client.py
atropos/slots/: __init__.py  executor.py  pool.py  slot.py
atropos/terminal/: __init__.py  asciinema_stream.py
atropos/tools/: __init__.py  base.py  basic_tools.py  build_registry.py  hermes_external_tools.py  (+12 more)
configs/: endless_terminals.yaml  run_mixed_tasks.sh  run_terminal_tasks.sh
cron/: scheduler.py
docs/: MODAL_BACKEND.md  cli.md  messaging.md  nixos-setup.md  nomad_backend_plan.md  tools.md
environments/: __init__.py  agent_loop.py  gsm8k_agent_env.py  hermes_base_env.py  patches.py  swe_smith_oracle_env.py
gateway/: run.py
hermes_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hermes_cli/: auth.py  banner.py  clipboard.py  color_scheme.py  commands.py  config.py  login.py  main.py  models.py  runtime_provider.py  setup.py  status.py
hermes_rs/: Cargo.toml  pyproject.toml
local_models/: __init__.py  __main__.py  serve.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nix/: devShell.nix  module.nix  nixosModules.nix  packages.nix
scripts/: install.ps1  install.sh  launch_llama_cpp_glm47_flash.sh  launch_llama_cpp_hermes_4_36b.sh  test_run.sh
swarm/: APPROVAL.md  ARTIFACTS.md  CLI.md  MERGE.md  MESSAGING.md  MONITOR.md  ORCHESTRATOR.md  PLANNER.md  ROUTER.md  SCHEDULER.md  STATUS.md  TRACKER.md  VERIFIER.md  WORKER.md  WORKTREE.md  __init__.py  approval.py  artifacts.py  cli.py  exceptions.py  merge.py  messaging.py  monitor.py  orchestrator.py  planner.py  roles.py  router.py  scheduler.py  types.py  verifier.py  worker.py  worktree.py
testbed/: .gitignore  README.md  __init__.py  eval_runner.py  harness.py  repl.py  tasks.yaml
tests/: test_batch_runner.py  test_cli_init.py  test_headless_cli.py  test_modal_integration.py  test_modal_stress.py  test_modal_terminal.py  test_run_agent.py  test_swarm.py  test_tool_call_parsing.py  test_web_tools.py
tools/: __init__.py  browser_tool.py  delegate_tool.py  image_generation_tool.py  mcp_tool.py  mixture_of_agents_tool.py  modal_pool.py  nomad_slotpool.py  rl_training_tool.py  simple_terminal_tool.py  terminal_tool.py  vision_tools.py  web_tools.py
ui/: __init__.py  event_widgets.py  hermes_ui.py  main_window.py  start_hermes_ui.sh  websocket_client.py
wandb/: latest-run
web_client/: __main__.py  bridge.py  index.html
(+32 files in other folders)
