[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent"
version = "0.1.0"
description = "AI agent with advanced tool-calling and toolsets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nous Research" }]
license = { text = "MIT" }
dependencies = [
  # Core
  "openai",
  "python-dotenv",
  "fire",
  "httpx",
  "rich",
  "tenacity",
  "pyyaml",
  "prompt_toolkit",
  "requests",
  "jinja2",
  "pydantic>=2.0",
  # Tools
  "firecrawl-py",
  "fal-client",
  # mini-swe-agent deps (terminal tool)
  "litellm>=1.75.5",
  "typer",
  "platformdirs",
]

[project.optional-dependencies]
modal = ["modal", "boto3"]
dev = ["pytest", "pytest-asyncio"]
# Install Atropos from source (PyPI is often stale for this internal dependency).
atropos = [
  "atroposlib @ git+ssh://git@github.com/NousResearch/atropos.git",
  # Atropos integration runtime deps (kept optional for Hermes-only users)
  "aiohttp",
  "fastapi",
  "uvicorn",
  "pyte",
]

[project.scripts]
hermes-agent = "run_agent:main"

[tool.setuptools]
py-modules = [
  "run_agent",
  "model_tools",
  "toolsets",
  "batch_runner",
  "trajectory_compressor",
  "toolset_distributions",
  "atropos_compatible_agent",
  "local_server",
]

[tool.setuptools.packages.find]
include = ["tools", "atropos", "atropos.*"]
